Introduce first batch of dynamic fix patches
...or whatever I should call them